force-app/main/default/objects/Book__c/fields/PublicationYear__c.field-meta.xml
<CustomField>
    <fullName>PublicationYear__c</fullName>
    <label>公開年</label>
    <length>4</length>
    <type>Text</type>
</CustomField>