force-app/main/default/objects/Book__c/fields/PublisherId__c.field-meta.xml
<CustomField>
    <fullName>PublisherId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>出版社</label>
    <referenceTo>Publisher__c</referenceTo>
    <relationshipLabel>本</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>